<resources>
    <string name="app_name">Lab6</string>
    
    <string name="frstFragmentMssg">Good Morning, Diana</string>
    
    <string name="library">Your Library</string>
    <string name="recent">Most recent</string>
    <string name="Like">Liked Songs</string>
    <string name="songs">songs</string>
    <string name="num">0</string>

    <string name="search">Search</string>
    <string name="top">Your top genres</string>

    <string name="home">Home</string>
    <string name="library2">Library</string>

    <string name="description">descripcionX</string>

</resources>