<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LibraryFragment">


    <ImageView
        android:id="@+id/user"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:contentDescription="@string/description"

        android:src="@drawable/user3"

        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/library"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="4dp"
        android:layout_marginEnd="35dp"

        android:text="@string/library"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toStartOf="@id/Lupa"
        app:layout_constraintStart_toEndOf="@id/user"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/add"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:background="@color/black"

        android:contentDescription="@string/description"

        android:src="@drawable/mas__1_"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Lupa"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/Lupa"
        android:layout_width="40dp"
        android:layout_height="40dp"

        android:contentDescription="@string/description"

        android:src="@drawable/lupa"

        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/library"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/add"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/Arrows"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"

        android:contentDescription="@string/description"

        android:src="@drawable/flecha_de_direccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="210dp"
        android:text="@string/recent"

        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Arrows"
        app:layout_constraintTop_toTopOf="@id/guideline2" />

    <ImageView
        android:id="@+id/favs"
        android:layout_width="70dp"
        android:layout_height="70dp"

        android:contentDescription="@string/description"

        android:src="@drawable/favs"

        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"

        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/liked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/Like"
        android:textColor="@color/white"
        android:textSize="25sp"

        android:layout_marginEnd="135dp"
        android:layout_marginTop="15dp"

        app:layout_constraintStart_toEndOf="@id/favs"
        app:layout_constraintTop_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/songs"
        android:textColor="@color/white"
        android:textSize="18sp"

        android:layout_marginEnd="185dp"
        app:layout_constraintTop_toBottomOf="@id/liked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/num"
        />

    <TextView
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/num"
        android:textColor="@color/white"
        android:textSize="18sp"

        app:layout_constraintTop_toBottomOf="@id/liked"
        app:layout_constraintStart_toEndOf="@id/favs"
        app:layout_constraintEnd_toStartOf="@id/song"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="102dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="179dp" />
</androidx.constraintlayout.widget.ConstraintLayout>